--- a/src/main/resources/templates/cliente/evento/evento-detalle.html
+++ b/src/main/resources/templates/cliente/evento/evento-detalle.html
@@ -108,7 +108,7 @@
           <!-- Imagen del Evento -->
           <div class="flex justify-center items-center">
             <img
-              src="https://via.placeholder.com/300"
+              src="https://dummyimage.com/300x300/cccccc/000000"
               alt="Imagen del Evento"
               class="rounded-lg shadow-md"
             />
