--- a/src/main/resources/templates/cliente/reserva/reserva-form.html
+++ b/src/main/resources/templates/cliente/reserva/reserva-form.html
@@ -52,7 +52,7 @@
       <h1 class="text-xl font-bold text-center mb-4">Formulario de Reserva</h1>
       <form th:action="@{/cliente/reserva/editar/{id}(id=${reserva.idReserva})}" method="post">
         <div class="space-y-4">
-          <!-- Plazas Disponibles -->
+
           <div>
             <label for="plazasDisponibles" class="block text-sm font-medium">
               Plazas Disponibles
@@ -70,7 +70,7 @@
               Actualmente hay <span th:text="${plazasDisponibles}"></span> plazas disponibles.
             </p>
           </div>
-          <!-- Cantidad -->
+
           <div>
             <label for="cantidad" class="block text-sm font-medium">
               Cantidad
@@ -87,7 +87,7 @@
               aria-required="true"
             />
           </div>
-          <!-- Observaciones -->
+
           <div>
             <label for="observaciones" class="block text-sm font-medium">
               Observaciones
@@ -101,7 +101,8 @@
             ></textarea>
           </div>
         </div>
-        <!-- Botones -->
+
+        <!-- Botones acciones -->
         <div class="flex flex-col space-y-3 mt-6">
           <button
             type="submit"
